Fixed dark mode code color, added readme

--- a/src/main.scss
+++ b/src/main.scss
@@ -171,7 +171,7 @@ body.dark {
             font-family: monospace;
             font-size: 12px;
             background-color: rgba(110,118,129,0.4);
-            color: black;
+            color: #c9d1d9;
             padding: .2em .4em;
             font-size: 85%;
         }
